# modal-mongodb

./: main.py  pymongo.ipynb  pyproject.toml
backend/: common.py  database.py  embeddings.py  extract.py
