[project]
name = "modal-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.1.0",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pymongo[srv]>=4.13.2",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
